# teams-transcript-notion-sync

./: .env.example  .gitignore  README.md  pyproject.toml
src/teams_transcript_notion_sync/: __init__.py  audio.py  config.py  db.py  noise_filter.py  notion_writer.py  pipeline.py  scanner.py  summarizer.py  transcribe.py
